# api-python

./: README.md
aut_api_fastapi/: README.md  pyproject.toml  requirements.txt
aut_api_fastapi/app/: main.py  models.py
test_api_requests/: README.md  pyproject.toml  requirements.txt
test_api_requests/config/: api_settings.py
test_api_requests/data/: new_product.json  update_product.json
test_api_requests/tests/: test_products.py
test_api_requests/utils/: api_utils.py  json_utils.py  response_utils.py
